refactor: 이름 검증을 위한 Name 객체 도입 및 검증 책임 이동